--- a/CSS/style.css
+++ b/CSS/style.css
@@ -231,7 +231,7 @@ input[type=submit]{
 /*------------------------------------------------------------------------*/
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Hero-min.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
